# SREoob

./: .gitignore  Dockerfile.backend  README.md  docker-compose.prod.yml  docker-compose.yml  install-server.sh  package.json  pnpm-lock.yaml  pyproject.toml  run_agent_server.py  to-do.md
.github/: dependabot.yml
.github/workflows/: backend-deploy.yml  build-all-images.yml  frontend-deploy.yml  full-stack-deploy.yml  release.yml
agent/: .env.example  DEPLOYMENT.md  Dockerfile  README.md  build-all.sh  build-local.sh  build.sh  client.go  config.go  demo-install.sh  go.mod  go.sum  install.sh  main.go  monitor.go  sreoob-agent.service
backend/: CONFIG.md  env-example
backend/app/: agent_server.py  config.py  database.py  main.py  models.py  monitor.py
backend/app/api/: agent.py  auth.py  endpoints.py
backend/utils/: genhash.sh
frontend/: Dockerfile  next.config.js  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(dashboard)/: page.tsx
frontend/src/app/(dashboard)/agents/: page.tsx
frontend/src/components/: AddSiteDialog.tsx
nginx/: nginx.conf  nginx.prod.conf
pingCheck/: README.md  go.mod  go.sum  main.go  pingcheck
