[project]
name = "siteup-backend"
version = "0.1.0"
description = "Simple website monitoring tool"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "aiosqlite>=0.19.0",
    "httpx>=0.25.0",
    "pydantic-settings>=2.0.0",
    "websockets>=12.0",
    "ping3>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["backend"] 